--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /*
 Theme Name: Kids2prosports
 Theme URI: http://www.kids2prosports.com
@@ -86,7 +86,7 @@ a:hover {
 }
 ul { margin:5px;}
 ul li { font-size:12px; margin-bottom:3px; line-height:17px; list-style-type:none; padding:0;  }
-h1 { font-size: 13px; line-height:17px; font-weight: bold; visibility: visible !important; color:#680000; margin-bottom:5px; }
+h1 { font-size: 13px; line-height:17px; font-weight: bold; visibility: visible !important; color:#680000; margin-bottom:5px; margin-left:5px; }
 h2 {
     font-family: Formata,Arial,Helvetica,sans-serif !important;
     font-size: 18px;
@@ -153,7 +153,14 @@ a#thire1 {background:url(../images/welcomeBtn.png) no-repeat left top; display:i
 a#thire2 {background:url(../images/sports.png) no-repeat left top; display:inline-block; width:116px; height:34px; }
 a#thire3 {background:url(../images/Multi.png) no-repeat left top; display:inline-block; width:116px; height:34px; }
 a#thire4 {background:url(../images/discoverBtn.png) no-repeat left top; display:inline-block; width:116px; height:34px; }
-a#thire5 {background:url(../images/mediaBtn.png) no-repeat left top; display:inline-block; width:116px; height:34px; }
+/*a#thire5 {background:url(../images/mediaBtn.png) no-repeat left top; display:inline-block; width:116px; height:34px; }*/
+a#thire5 {background:url(../images/aboutus.png) no-repeat left top; display:inline-block; width:116px; height:34px; }
+
+#how2usetab { margin:20px auto; }
+a#thire6 {background:url(../images/k2pshomepage.png) no-repeat left top; display:inline-block; width:170px; height:42px; }
+a#thire7 {background:url(../images/myaccountfeatures.png) no-repeat left top; display:inline-block; width:170px; height:42px; }
+a#thire8 {background:url(../images/profilefeatures.png) no-repeat left top; display:inline-block; width:170px; height:42px; }
+a#thire9 {background:url(../images/Advertisings.png) no-repeat left top; display:inline-block; width:170px; height:42px; }
 
 
 
@@ -442,10 +449,12 @@ input[type="submit"], input[type="button"], .btn {border:1px solid #00531b; colo
 /* container ends */
 
 /* footer starts */
-#footerWrap { background:#8a090c; padding:10px; font-size:12px; }
+#footerWrap { background:#8a090c; padding:5px; font-size:11px; }
 footer {  overflow:hidden; }
-footer a, footer a:visited { color: #ffffff; display: inline-block; height: 15px; line-height: 15px; padding: 4px 0 4px 10px;
+footer a, footer a:visited { color: #ffffff; display: inline-block; height: 15px; line-height: 15px; padding: 4px 4px 4px 4px;
     text-decoration: none; width:135px; text-transform: uppercase; }
+/*footer a, footer a:visited { color: #ffffff; display: inline-block; height: 15px; line-height: 15px; padding: 4px 0 4px 10px;
+    text-decoration: none; width:135px; text-transform: uppercase; }*/
 footer a:hover { background:#520507; color: #FFFFFF; text-decoration: none; }
 .dots { background: url(../images/dots.gif) repeat-x scroll left bottom transparent; font-size: 0; height: 2px; margin: 5px 7px 7px 6px;
 }
@@ -519,4 +528,20 @@ p.affiiliate img { float:left; margin:0 5px 5px 0; width:110px;}
 	
 	#outerBg { margin:0 auto; background:url (../images/landscape.jpg) no-repeat left top;} 
 	
+}
+
+#tPara p
+{
+    padding:0 8px 0 8px;
+}
+tPara h1
+{
+    margin-left:8px;
+}
+.how2tabtext
+{
+    color: gray;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 8px;
 }
